[package]
name = "turnip-counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peppi = "1.0.0-alpha.6"
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-rustls", "migrate"] }
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }
futures = "0.3"
walkdir = "2.3.2"
